# num

./: .gitignore  CMakeLists.txt  readme.md
source/: CMakeLists.txt  MainWin.h  main.cpp
source/Equation/: Bisection.cpp  Bisection.h  Equation.cpp  Equation.h  Newton.cpp  Newton.h  all.h  readme.md
source/Frame/: MainWin.cpp  MainWin.ui
source/Frame/FrameDraw/: FrameDraw.cpp  FrameDraw.h
source/Frame/FrameEquation/: FrameFunc.cpp  FrameFunc.h  FrameFunc.ui  Sampling.h
source/Frame/FrameEquation/Equation/: Bisection.cpp  Bisection.h  Equation.h
source/Frame/FrameFunc/: FrameFunc.cpp  FrameFunc.h  FrameFunc.ui
source/Frame/MainWin/: MainWin.h  MainWin.ui
source/FrameDraw/: FrameDraw.cpp  FrameDraw.h
source/FrameEquation/: FrameFunc.cpp  FrameFunc.h  FrameFunc.ui  Sampling.h
source/IteratorFunc/: NewtonOriginal.cpp  NewtonOriginal.h
source/MainWin/: MainWin.ui
source/core/Equation/: Bisection.cpp  Bisection.h  all.h  readme.md
source/core/expr/: expr.cpp
source/expr/: expr.cpp
source/num/: CMakeLists.txt  main.cpp
source/num/Frame/FrameEGIter/: FrameEGIter.cpp  FrameEGIter.h  FrameEGIter.ui
source/num/Frame/FrameEquation/: FrameFunc.cpp  FrameFunc.h  FrameFunc.ui
source/num/Frame/FrameEquationGroup/: EquationGroup.cpp  EquationGroup.h  EquationGroup.ui
source/num/Frame/FrameInterValue/: FrameInterValue.cpp  FrameInterValue.h  FrameInterValue.ui
source/num/Frame/MainWin/: MainWin.cpp  MainWin.h  MainWin.ui
source/num/core/Equation/: Equation.h  GeneralIterate.cpp  GeneralIterate.h  Newton.cpp  Sampling.cpp  all.h
source/num/core/EquationGroup/: EGGauss.cpp  EGGauss.h  EGLU.cpp  EGLU.h  EGSolution.cpp  EGSolution.h  EquationGroup.cpp  EquationGroup.h
source/num/core/EquationGroupDM/: EGGauss.cpp  EGLU.cpp  EGLU.h  reamde.md
source/num/core/EquationGroupIter/: EGIterJacobi.cpp  EGIterJacobi.h  EGIterSolution.cpp  EGIterSolution.h  readme.md
source/num/core/InterValue/: IVLagrange.cpp  IVLagrange.h  IVSolution.cpp  IVSolution.h  readme.md
source/num/core/Matrix/: Matrix.hpp
source/num/model/: mat4Model.cpp  mat4Model.h  matModel.cpp  matModel.h
source/num/model/MatModel/: matModel.h
source/num/model/XYModel/: XYModel.cpp  XYModel.h
source/num/widget/FrameDraw/: FrameDraw.cpp  FrameDraw.h
source/test/: CMakeLists.txt  test.cpp
source/widget/FrameDraw/: FrameDraw.cpp
